# norenwake

./: AGENTS.md  Cargo.toml  README.ja.md  README.md
issue-notes/: 1.md  2.md  4.md
src/: app.rs  git_ops.rs  github.rs  lib.rs  logging.rs  main.rs  models.rs  self_update.rs  ui.rs  util.rs
src/app/: cache.rs  input.rs  startup.rs  workflow.rs
src/tests/: app_tests.rs  github_tests.rs  mod.rs  readme_tests.rs  remote_tests.rs  self_update_tests.rs
src/ui/: geometry.rs  overlays.rs  panes.rs  theme.rs
