[package]
name = "norenwake"
version = "0.9.0"
edition = "2021"

[dependencies]
anyhow = "1"
ansi-to-tui = "8.0.1"
arboard = "3"
crossterm = "0.29"
dirs = "6"
ratatui = "0.30"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
toml = "1"
tui-markdown = "0.3.6"
